--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html {
 body {
   background: #201f1f;
   color: white;
+  overflow-y: hidden;
 }
 .text-kanit {
   font-family: "Kanit", sans-serif;
